--- a/_layouts/website/layout.html
+++ b/_layouts/website/layout.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{ "images/apple-touch-icon-precomposed-152.png"|resolveAsset }}">
-    <link rel="shortcut icon" href="{{ "images/favicon.ico"|resolveAsset }}" type="image/x-icon">
+    <link rel="shortcut icon" href="{{ "images/favicon-32x32.png"|resolveAsset }}" type="image/x-icon">
 {% endblock %}
 
 {% block style %}
@@ -17,6 +17,8 @@
     {{ super() }}
 
     {### Custom stylesheets for the book ###}
+
+    <link rel="stylesheet" href="{{ "js/jquery-ui.min.css"|resolveAsset }}">
 
     {% for type, style in config.styles %}
         {% if fileExists(style) and type == "website" %}
