span anchors in packed tables stretched to full height

--- a/src/less/brcm/data.less
+++ b/src/less/brcm/data.less
@@ -27,10 +27,13 @@
     span {
         display: block;
         padding: 2px 2px;
+        height: 100%;
     }
 
     span a {
         display: block;
+        height: 100%;
+        vertical-align: middle;
         color: black !important;
         text-decoration: none !important;
 
