hide the lame chapter lines in summary

--- a/src/less/brcm/website.less
+++ b/src/less/brcm/website.less
@@ -42,6 +42,10 @@ a.btn.pull-left.js-toolbar-action {
     color: #008cff !important;
 }
 
+.summary .divider {
+    display: none;
+}
+
 .page-inner {
     margin: 10px 20px 0px 20px;
 }
