tweaked flexbox keys to support older webkit and wkhtmltopdf

--- a/src/less/brcm/website.less
+++ b/src/less/brcm/website.less
@@ -56,7 +56,7 @@ a.btn.pull-left.js-toolbar-action {
     font-family: @monofont;
     font-size: .90em;
     line-height: 1.2;
-    background-color: #efefef;
+    background-color: @grey;
 }
 
 .markdown-section blockquote {
