--- a/src/less/brcm/data.less
+++ b/src/less/brcm/data.less
@@ -19,6 +19,8 @@
     padding: 0;
 
     * {
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
         box-sizing: border-box;
         margin: 0;
         padding: 0;
@@ -53,17 +55,27 @@
     border-right: 1px solid @brcm_color;
     border-bottom: 1px solid @brcm_color;
     width: 100%;
+
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
 
     .overflowHidden() {
         /* overflow text in a small box */
         white-space: nowrap;
         overflow: hidden;
-        text-overflow: ellipsis;
+        text-overflow: clip;
     }
 
     .flex90() {
+        display: -webkit-box;
+        display: -moz-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
         display: flex;
+
         width: 90%;
     }
 
@@ -92,6 +104,13 @@
 
     .pkd_row_data {
         .flex90();
+
+        -webkit-box-orient: horizontal;
+        -moz-box-direction: reverse;
+        -webkit-box-direction: reverse;
+        -webkit-flex-direction: row-reverse;
+        -ms-flexbox-direction: row-reverse;
+        -ms-flex-direction: row-reverse;
         flex-direction: row-reverse;
 
         > div {
@@ -128,6 +147,8 @@
     padding: 0;
 
     * {
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
         box-sizing: border-box;
         margin: 0;
         padding: 0;
@@ -155,6 +176,11 @@
     border-right: 1px solid @brcm_color;
     border-bottom: 1px solid @brcm_color;
     width: 100%;
+
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
 
     .overflowBreakAll() {
@@ -162,33 +188,29 @@
         word-break: break-all;
     }
 
-    .flex90() {
-        display: flex;
-        width: 90%;
-    }
-
     .dt_row_header {
         background-color: @dgrey;
-        //font-family: @normalfont !important;
+        font-family: @normalfont !important;
         font-weight: bold;
     }
 
     .dt_row_value {
-        width: 20%;
+        .overflowBreakAll();
+        width: 15%;
         text-align: center;
-        //font-family: @monofont;
+        font-family: @monofont;
     }
 
     .dt_row_name {
         .overflowBreakAll();
-        width: 30%;
+        width: 25%;
         text-align: center;
         border-left: 1px solid @brcm_color;
-        //font-family: @monofont;
+        font-family: @monofont;
     }
 
     .dt_row_descr {
-        width: 100%; /* only on last flex'ed div */
+        width: 60%;
         border-left: 1px solid @brcm_color;
     }
 
