--- a/src/less/brcm/website.less
+++ b/src/less/brcm/website.less
@@ -1,10 +1,5 @@
 
-@monofont: "Droid Sans Mono", "Roboto Mono", "Lucida Console", monospace;
-@normalfont: sans-serif;
-
-@brcm_color: rgb(204,32,48);
-@grey: rgb(239,239,239);
-@dgrey: darken(@grey, 10%);
+@import "base.less";
 
 a {
     font-weight: 500 !important;
@@ -60,6 +55,7 @@ a.btn.pull-left.js-toolbar-action {
 }
 
 .markdown-section blockquote {
+    border-left: 1px solid @brcm_color;
     color: #404040;
     font-size: .90em;
     line-height: 1.2;
