better print layout for wkhtmltopdf version bump

--- a/src/less/brcm/data.less
+++ b/src/less/brcm/data.less
@@ -3,6 +3,8 @@
 
 .pkd,
 .dt {
+    page-break-inside: avoid;
+
     span p:last-child {
         margin-bottom: 0;
     }
@@ -225,7 +227,7 @@
 }
 
 .field_location {
-    font-size: .70em;
+    font-size: .70em !important;
 }
 
 .multi_column_object_list {
