--- a/src/less/brcm/base.less
+++ b/src/less/brcm/base.less
@@ -105,6 +105,17 @@ a.btn.pull-left.js-toolbar-action {
     font-size: 14px;
 }
 
+.header_level {
+    font-size: .90em;
+    font-weight: normal;
+}
+
+.summary .header_level {
+    display: inline !important;
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
 @import "data.less";
 @import "snip.less";
 
