refined changelog style

--- a/src/less/brcm/base.less
+++ b/src/less/brcm/base.less
@@ -103,8 +103,18 @@ a.btn.pull-left.js-toolbar-action {
     font-size: smaller;
     text-align: center;
 }
+.changelog th {
+    text-align: center;
+}
 .changelog tr td:nth-child(1) {
+    white-space: nowrap;
     font-weight: bold;
+}
+.changelog tr td:nth-child(2) {
+    white-space: nowrap;
+}
+.changelog tr td:nth-child(3) {
+    white-space: nowrap;
 }
 .changelog tr td:nth-child(4) {
     text-align: left;
