Updated flex div border render issues for ebook/pdf

--- a/src/less/ebook.less
+++ b/src/less/ebook.less
@@ -1,3 +1,16 @@
 @import "./ebook/base.less";
 
 @import "brcm/pdf.less";
+
+.pkd {
+    border-bottom: 1px solid @brcm_color !important;
+
+    .pkd_row {
+        border-top: 1px solid @brcm_color !important;
+    }
+}
+
+* {
+    zoom: .98;
+}
+
