slightly smaller tables from markdown updated version

--- a/src/less/brcm/base.less
+++ b/src/less/brcm/base.less
@@ -81,6 +81,13 @@ h1>p, h2>p, h3>p, h4>p, h5>p, h6>p {
     line-height: 1.2;
 }
 
+.markdown-section table {
+    width: 90%;
+    font-size: .80em;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .brcm-logo {
     background-color: #ffffff;
     height: 50px;
